# alg-visualize

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  deny.toml  design.md  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/workflows/: quality.yml
apps/web/: index.html  tsconfig.json  vite.config.ts
apps/web/src/: AlgorithmSettingsDialog.tsx  App.tsx  CanvasHeader.tsx  EditorPanel.tsx  FatalErrorBoundary.tsx  GeneratorDialog.tsx  InputPanel.tsx  InspectorPanel.tsx  PixiCanvas.tsx  Timeline.tsx  TopBar.tsx  VisualizationWorkspace.tsx  btree-topology.ts  canvas-markers.ts  dense-particle-renderer.ts  engine-error-source.test.ts  engine-error-source.ts  engine-frame-decoder.ts  engine-session-response.ts  engine-types.ts  engine-worker.ts  generator-request.ts  graph-layout.test.ts  graph-layout.ts  main.tsx  packet.test.ts  packet.ts  pedagogy.test.ts  pedagogy.ts  pixi-controller.ts  pixi-edge-renderer.ts  pixi-scene-renderer.ts  playback.test.ts  playback.ts  scenario.ts  staged-next-coordinator.test.ts  staged-next-coordinator.ts  store.ts  structure-index.test.ts  structure-index.ts  (+13 more)
artifacts/: README.md
crates/ordered-map/: Cargo.toml
crates/ordered-map/src/: aa.rs  avl.rs  avl_ordered_map.rs  avl_tests.rs  binary_store.rs  binary_trace.rs  btree.rs  btree_tests.rs  lib.rs  llrb.rs  model.rs  randomized.rs  registry.rs  scapegoat.rs  skip_list.rs  splay.rs  test_support.rs  trace_state.rs  trace_state_tests.rs  veb.rs  wbt.rs  xfast.rs  xfast_tests.rs  yfast.rs  yfast_ordered_map.rs  yfast_tests.rs
crates/visualizer-core/: Cargo.toml
crates/visualizer-core/src/: arena.rs  cursor.rs  dsl.rs  generator.rs  index.rs  jcs.rs  lib.rs  plugin.rs  provenance.rs  rng.rs  scenario.rs  scene.rs  tie_break.rs
crates/visualizer-core/src/generator/: tests.rs
crates/visualizer-wasm/: Cargo.toml
crates/visualizer-wasm/src/: lib.rs
fixtures/contracts/: jcs-cross-language.json
scripts/: build-wasm.sh  run-browser-ci.sh  verify-toolchain.sh
tests/browser/: algorithms.spec.ts  browser-quality.spec.ts  browser-test.ts  playwright.config.ts  tsconfig.json
toolchain/: versions.json
