[package]
name = "ordered-map"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Traceable ordered-map algorithms for the visualizer"

[dependencies]
hashbrown = "=0.17.1"
num-bigint = "=0.5.1"
serde = { version = "=1.0.228", features = ["derive"] }
siphasher = "=1.0.3"
thiserror = "=2.0.18"
visualizer-core = { path = "../visualizer-core", version = "=0.1.0" }

[dev-dependencies]
proptest = { version = "=1.11.0", default-features = false, features = ["std"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
