[package]
name = "visualizer-core"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Deterministic contracts for the algorithm visualizer"

[dependencies]
ryu-js = "=1.0.3"
schemars = "=1.2.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = { version = "=1.0.150", features = ["float_roundtrip", "raw_value"] }
sha2 = "=0.11.0"
thiserror = "=2.0.18"
ts-rs = { version = "=12.0.1", features = ["no-serde-warnings", "serde-json-impl"] }

[dev-dependencies]
proptest = { version = "=1.11.0", default-features = false, features = ["std"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
