[package]
name = "visualizer-wasm"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Web Worker WASM adapter for the algorithm visualizer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ordered-map = { path = "../ordered-map", version = "=0.1.0" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
visualizer-core = { path = "../visualizer-core", version = "=0.1.0" }
wasm-bindgen = "=0.2.121"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
